--- a/src/Views/MainWindow.xaml
+++ b/src/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
                              xmlns:local="clr-namespace:KarveCar.Views"
                              xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
                              xmlns:lang="clr-namespace:KarveCar.Logic.Generic"
-                             xmlns:behaviour="clr-namespace:KarveCar.Behaviour"
+                             xmlns:behavior="clr-namespace:KarveCar.Behaviour"
                              xmlns:prism="http://prismlibrary.com/"
                              prism:ViewModelLocator.AutoWireViewModel="True"
                              xmlns:karveLocale="clr-namespace:KarveLocale;assembly=KarveLocale"
@@ -1864,8 +1864,7 @@
                             </Setter>
                         </Style>
                     </syncfusion:TabControlExt.ItemContainerStyle>
-                    
-                 
+
                     </syncfusion:TabControlExt>
             </Grid>
 
